--- a/S02_Quiz_02&03&04.ipynb
+++ b/S02_Quiz_02&03&04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOstq//FazTdChDDmr6SIBa",
+      "authorship_tag": "ABX9TyOHFE1UkypYwKqjhHElxwZ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/farima-trb/Python-Programming-Advanced-/blob/main/S02_Quiz_02%2603%2604.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/farima-trb/Advanced-Python-Programming/blob/main/S02_Quiz_02%2603%2604.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -169,7 +169,7 @@
         "id": "NEJppcHiDTFZ",
         "outputId": "83fbefb4-3af7-48fe-ef95-1acc805355d7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
         "id": "iHhBenL6TyQ9",
         "outputId": "f2259999-c76f-4a18-e5b2-7faa3fd7a74c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
         "id": "fN1e3GBxEzff",
         "outputId": "151e1359-3ef4-4791-809f-3a31826b2e0d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "jJvkJ5mc6UEp",
         "outputId": "453289db-5b42-4d73-e8ab-cb56f85fe9d7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,6 +427,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cause we have two print methods in tandem (the first one in the main body and the second one in the class cpu definition) :\n",
+        "# print(print(brand.get_name()) --> This mobile has HighTech Intel CPU\n",
+        "#                                   None\n",
+        "\n",
+        "#like print(print(31)) --> 31\n",
+        "#                          None"
+      ],
+      "metadata": {
+        "id": "O4VzZ4kjJlhA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -468,7 +484,7 @@
         },
         "outputId": "547c4165-043b-43bf-e004-5d3dda2c4999"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
